# beetle_bits

./: Cargo.toml
src/: bit.rs  f3.rs  lib.rs  nibble.rs  u1.rs
