[package]
name = "beetle_bits"
version = "0.2.2"
authors = ["beetle"]
edition = "2021"
description = "A collection of bit-based types. Currently only u1 (1bit uint) and f3 (3bit float) are implemented"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
