[package]
name = "beetle_bits"
version = "0.2.6"
authors = ["beetle"]
edition = "2024"
description = "A collection of bit-based types. Currently only u1 (1bit uint) and f3 (3bit float) are implemented"
license = "MIT"
repository = "https://github.com/Mearkatz/beetle_bits"


[dependencies]
num-traits = "0.2.19"
